# TST-Mechanistic-Interpretability

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
Notebooks/: Patching.ipynb  Patching_Stability.ipynb  Statistical_Reanalysis.ipynb
Results/: README.md
Results/LSST/denoise/class_15/: aggregated_deltas.npz
Results/LSST/denoise/class_16/: aggregated_deltas.npz
Results/LSST/denoise/class_42/: aggregated_deltas.npz
Results/LSST/denoise/class_52/: aggregated_deltas.npz
Results/LSST/denoise/class_53/: aggregated_deltas.npz
Results/LSST/denoise/class_6/: aggregated_deltas.npz
Results/LSST/denoise/class_62/: aggregated_deltas.npz
Results/LSST/denoise/class_65/: aggregated_deltas.npz
Results/LSST/denoise/class_67/: aggregated_deltas.npz
Results/LSST/denoise/class_88/: aggregated_deltas.npz
Results/LSST/denoise/class_90/: aggregated_deltas.npz
Results/LSST/denoise/class_92/: aggregated_deltas.npz
Results/LSST/denoise/class_95/: aggregated_deltas.npz
Results/LSST/noise/class_15/: aggregated_deltas.npz
Results/LSST/noise/class_16/: aggregated_deltas.npz
Results/LSST/noise/class_42/: aggregated_deltas.npz
Results/Stability/JapaneseVowels/: summary_table.md
Results/Stability/LSST/: summary_table.md
Results/Stability/PenDigits/: summary_table.md
Results/Stability/Summary/: aggregate_results.csv  aggregate_stability_table.csv  findings.md  findings_summary.md
Results/Summary/: COMPLETE_STATISTICAL_REPORT.md  all_pairs_summary.csv  dataset_overview.csv
Results/Summary/data/: baseline_comparisons.csv  confidence_intervals.csv  effect_sizes.csv  fdr_corrected_pvalues.csv  null_distribution.csv  stability_with_statistics.csv
Results/Summary/tables/: table1_summary.csv  table1_summary.md  table2_significant_heads.csv  table2_significant_heads.md  table3_method_comparison.csv  table3_method_comparison.md  table4_stability.csv  table4_stability.md  table5_power_analysis.csv  table5_power_analysis.md
Scripts/: generate_pipeline_diagram.py  run_complete_analysis.py  run_stability_experiments.py
Utilities/: TST_trainer.py  __init__.py  baselines.py  config.py  metrics.py  perturbations.py  stability_metrics.py  statistics.py  utils.py
tests/: __init__.py  conftest.py  test_baselines.py  test_config.py  test_metrics.py  test_perturbations.py  test_stability.py  test_statistics.py  test_utils.py
writeups/: blog_post.md  lesswrong_post.md  linkedin_post.md  medium_substack.html  twitter_thread.md  x_post.md
(+1561 files in other folders)
